--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -51,8 +51,8 @@ jobs:
       with:
         draft: false
         prerelease: false
-        release_name: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
-        tag_name: ${{ github.ref }}
+        release_name: ${{ steps.version.outputs.version }}
+        tag_name: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
         body_path: CHANGELOG.md
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
