--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,7 +52,7 @@ jobs:
         draft: false
         prerelease: false
         release_name: ${{ steps.version.outputs.version }}
-        allowUpdates: "tag_name"
+        allowUpdates: 'tag_name'
         tag_name: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
         body_path: CHANGELOG.md
       env:
