--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,10 +2,16 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, staging ]
+    tags:
+      - 'v*'
+    paths-ignore:
+      - 'README.md'
+      - '.github/workflows/go.yml'
+      - 'docs/**'
   pull_request:
-    branches: [ main ]
-
+    branches: [ main, staging ]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,13 +28,9 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-
-    - name: create release 
-      uses: actions/upload-artifact@v3
-      if: success()
-      with:
-        name: build
-        path: me
+    
+    - name: Compress output
+      run:  tar -zcvf me.tar.gz ./output
         
     # extract branch name
     - name: Extract branch name
@@ -47,3 +49,11 @@ jobs:
       id: version
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    # Create release from tag
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          me.tar.gz
