--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+        
+    - name: checkout submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
     - name: Build
       run: make all 
